--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Xcode
 
+## App Config
+*/.xccconfig
+
 ## User settings
 xcuserdata/
-
-## Obj-C/Swift specific
-*.hmap
 
 ## App packaging
 *.ipa
@@ -15,7 +15,7 @@ xcuserdata/
 timeline.xctimeline
 playground.xcworkspace
 
-## Xcode Patch
+## Xcode
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
@@ -25,33 +25,5 @@ playground.xcworkspace
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 .build/
-
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build/
-
-# Accio dependency management
-Dependencies/
-.accio/
-
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo.
-# Instead, use fastlane to re-generate the screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/#source-control
-
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/**/*.png
-fastlane/test_output
-
-# Code Injection
-#
-# After new code Injection tools there's a generated folder /iOSInjectionProject
-# https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
