--- a/skinge-ios/Info.plist
+++ b/skinge-ios/Info.plist
@@ -15,5 +15,12 @@
 			<string></string>
 		</dict>
 	</array>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+		<key>UISceneConfigurations</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
